<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/image_birthday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:text="@string/congratulation"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignTop="@+id/next_imageButton"
        android:layout_centerHorizontal="true"
        android:background="@color/colorRGBA"
        android:padding="6dp"
        android:text="@string/send_button"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <ImageButton
        android:id="@+id/next_imageButton"
        android:layout_width="83dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorRGBA"
        android:contentDescription="@string/next_button_description"
        android:padding="6dp"
        android:src="@drawable/right_arrow" />

    <Button
        android:id="@+id/file_selector_button"
        android:layout_width="88dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/send_button"
        android:background="@color/colorRGBA"
        android:text="@string/file_selector_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

</RelativeLayout>