<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wallpaper"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/label_email_text_editor"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="385dp"
        android:textColorHint="@color/white_hint"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="305dp"
        android:layout_height="97dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:ems="10"
        android:hint="@string/congratulations_texteditor"
        android:textColorHint="@color/white_hint"
        android:textColor="@android:color/white"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/acceptbutton_text"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:background="@color/colorRGBA"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="218dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/subject_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white_hint"/>


</RelativeLayout>